--- a/Invest_Portfolio/MainWindow.xaml
+++ b/Invest_Portfolio/MainWindow.xaml
@@ -8,15 +8,13 @@
         Title="Invest Portfolio v1.0" Height="600" Width="1000">
 
     <Window.Resources>
-        <Style x:Key="Menu_Button_Style" TargetType="Button">
-
+        <Style x:Name="Menu_Button_Style" x:Key="Menu_Button_Style" TargetType="Button">
             <Style.Setters>
-                <Setter Property="Control.Background" Value="#00000000" />
+                <Setter Property="Control.Background" Value="#E5232328" />
                 <Setter Property="Control.Foreground" Value="#FFC8C8FF" />
-                <Setter Property="Control.BorderBrush" Value="#00000000" />
+                <Setter Property="Control.BorderThickness" Value="0" />
                 <Setter Property="Control.FontSize" Value="15" />
             </Style.Setters>
-            
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     
@@ -31,21 +29,26 @@
             <ColumnDefinition Width="150"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-
-        
         <Image Grid.ColumnSpan="2" x:Name="Background_Image" Source ="Resources/Fon.jpg" Stretch="UniformToFill" Visibility="Visible"/>
-        
         <Border x:Name="Border_Left" Grid.Column="0" Background="#E53C3C46">
-            <Border x:Name="Menu" CornerRadius="20,0,0,20" Background="#E5232328" BorderThickness="5,5,0,5">
-                <StackPanel Orientation="Vertical" VerticalAlignment="Top" Margin="0,100,0,0" >
-                    <Button Height="50" Content="Кнопка 1" Style="{StaticResource Menu_Button_Style}"/>
-                    <Button Height="50" Content="Кнопка 2" Style="{StaticResource Menu_Button_Style}"/>
-                    <Button Height="50" Content="Кнопка 3" Style="{StaticResource Menu_Button_Style}"/>
-                </StackPanel>
-            </Border>
             
+                <Grid>
+                <Grid.RowDefinitions>
+                        <RowDefinition Height="100"></RowDefinition>
+                        <RowDefinition Height="120"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                <Border Grid.Row="0" CornerRadius="20,0,0,0" Background="#E5232328" BorderThickness="5,5,0,0"></Border>
+                    <Border Grid.Row="1" BorderThickness="5,0,0,0" CornerRadius="50,0,0,0" >
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                            <Button x:Name="Menu_1" Height="40" Content="Кнопка 1" Style="{StaticResource Menu_Button_Style}" Click="Button_Menu_1"/>
+                            <Button x:Name="Menu_2" Height="40" Content="Кнопка 2" Style="{StaticResource Menu_Button_Style}" Click="Button_Menu_2"/>
+                            <Button x:Name="Menu_3" Height="40" Content="Кнопка 3" Style="{StaticResource Menu_Button_Style}" Click="Button_Menu_3"/>
+                        </StackPanel>
+                    </Border>
+                    <Border Grid.Row="2" CornerRadius="0,0,0,20" Background="#E5232328" BorderThickness="5,0,0,5"></Border>
+                </Grid>
         </Border>
-        
-        <Border x:Name="Border_Right" Grid.Column="1"  Background="#E53C3C46" ></Border>
+        <Border x:Name="Border_Right" Grid.Column="1"  Background="#E53C3C46"></Border>
     </Grid>
 </Window>
