--- a/Invest_Portfolio/App.xaml
+++ b/Invest_Portfolio/App.xaml
@@ -4,6 +4,26 @@
              xmlns:local="clr-namespace:Invest_Portfolio"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+
+            <SolidColorBrush x:Key="PrimaryHueLightBrush" Color="#00000000"/>
+            <SolidColorBrush x:Key="PrimaryHueLightForegroundBrush" Color="#FF232323"/>
+
+            <SolidColorBrush x:Key="PrimaryHueMidBrush" Color="#FF3B7F3B"/>
+            <SolidColorBrush x:Key="PrimaryHueMidForegroundBrush" Color="White"/>
+            
+            <SolidColorBrush x:Key="PrimaryHueDarkBrush" Color="#FF920122"/>
+            <SolidColorBrush x:Key="PrimaryHueDarkForegroundBrush" Color="#FFFFFF"/>
+            
+            <SolidColorBrush x:Key="SecondaryAccentBrush" Color="#FF0B44F5"/>
+            <SolidColorBrush x:Key="SecondaryAccentForegroundBrush" Color="#FFFFFF"/>
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
